# lesta-course

./: .gitignore  README.md
.github/workflows/: docker-image.yml  mac.yml  windows.yml
hello_lib/: CMakeLists.txt  Dockerfile  conanfile.txt
hello_lib/hello_bin/: CMakeLists.txt
hello_lib/hello_bin/src/: main.cpp
hello_lib/hello_lib/: CMakeLists.txt
hello_lib/hello_lib/src/: hello.cpp  hello.h
hello_lib/hello_lib/tests/: hello_lib_tests.cpp
hello_world/: CMakeLists.txt  Dockerfile  main.cpp
opengl_minimal/: CMakeLists.txt
opengl_minimal/data/: config.json  vertices.txt
opengl_minimal/data/shaders/: fragment_shader.frag
opengl_minimal/engine/: CMakeLists.txt
opengl_minimal/engine/include/: engine.hxx
opengl_minimal/engine/src/: engine.cxx  hot_reload_provider.cxx  hot_reload_provider.hxx
opengl_minimal/shaders/: fragment_shader.glsl  vertex_shader.glsl
prepare_engine_to_game/: CMakeLists.txt
prepare_engine_to_game/data/: config.json
prepare_engine_to_game/data/shaders/: fragment_shader.frag  vertex_shader.vert
prepare_engine_to_game/engine/: CMakeLists.txt  dd.cxx
prepare_engine_to_game/engine/include/: audio.hxx  engine.hxx  program.hxx  shader_program.hxx  sprite.hxx  structures.hxx  texture.hxx  view.hxx
prepare_engine_to_game/engine/src/: buffer.cxx  buffer.hxx  engine.cxx  hot_reload_provider.cxx  hot_reload_provider.hxx  imgui_impl_sdl3.cxx  shader_program.cxx  sprite.cxx  structures.cxx  texture.cxx  view.cxx
prepare_engine_to_game/game/: CMakeLists.txt
prepare_engine_to_game/game/src/: game.cxx  island.cxx  island.hxx  map.cxx  map.hxx  menu.cxx  menu.hxx  player.cxx  player.hxx  ship.cxx  ship.hxx
render_basic/: CMakeLists.txt
render_basic/src/: canvas.hxx  gfx_program.hxx  line_render.hxx  main.cxx  sdl_main.cxx  triangle_indexed_render.hxx  triangle_interpolated.hxx  triangle_render.hxx
render_basic/tests/: canvas_tests.cxx  draw_line_tests.cxx
sdl-shared/: CMakeLists.txt  Dockerfile
sdl-shared/src/: main.cpp
sdl-shared/tests/: test.py
sdl-static/: CMakeLists.txt  Dockerfile
sdl-static/src/: main.cpp
sdl-static/tests/: test.py
sdl_engine_exe/engine/: CMakeLists.txt
sdl_engine_exe/engine/include/: engine.hxx
sdl_engine_exe/engine/src/: engine.cxx
sdl_engine_exe/game/: CMakeLists.txt
sdl_engine_exe/game/src/: game.cxx
sdl_engine_shared/: CMakeLists.txt
sdl_engine_shared/src/: engine.cxx  engine.hxx  main.cxx
sdl_engine_static/: CMakeLists.txt
sdl_engine_static/src/: engine.cxx  engine.hxx
sdl_infinity_loop/: CMakeLists.txt
sdl_infinity_loop/src/: main.cxx
vertex_morphing/: CMakeLists.txt  conanfile.txt
vertex_morphing/data/: config.json  indices.txt
vertex_morphing/data/shaders/: fragment_shader.frag  imgui.frag  imgui.vert  vertex_shader.vert
vertex_morphing/engine/: CMakeLists.txt
vertex_morphing/engine/include/: engine.hxx
vertex_morphing/engine/src/: buffer.cxx  buffer.hxx  engine.cxx  hot_reload_provider.cxx  hot_reload_provider.hxx  imgui_impl_opengl3.cxx  imgui_impl_sdl3.cxx  imgui_impl_sdl3.hxx  program.cxx  program.hxx  sprite.cxx  texture.cxx  texture.hxx
vertex_morphing/game/src/: game.cxx
